--- a/nico.css
+++ b/nico.css
@@ -31,28 +31,55 @@ body {
 }
 
 .hero {
+  position: relative;
   height: 90vh;
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.6)),
-              url("kepek/fireplace.jpg") center/cover no-repeat;
+  overflow: hidden;
   display: grid;
   place-items: center;
+  
+}
+
+.bg-video {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(
+    rgba(0,0,0,0.6),
+    rgba(0,0,0,0.75)
+  );
+  z-index: 1;
 }
 
 .hero-overlay {
+  position: relative;
+  z-index: 2;
   text-align: center;
+  padding: 40px;
+  backdrop-filter: blur(4px);
 }
 
-.hero h1 {
+.hero-overlay h1 {
   font-family: "Dancing Script", cursive;
   font-size: clamp(42px, 6vw, 70px);
-  color: white;
+  color: #fff;
   text-shadow: 0 0 30px rgba(255,120,120,0.9);
 }
 
 .subtitle {
   color: #ffe0ea;
   margin-top: 10px;
+  font-size: 18px;
 }
+
 
 .fireplace-section {
   display: grid;
@@ -82,13 +109,13 @@ body {
 
 .letter {
   padding: 100px 10%;
-  background: linear-gradient(#fff, #fde9f1);
+  background: linear-gradient(#e67676, #f7b6d0);
 }
 
 .letter-card {
   max-width: 900px;
   margin: auto;
-  background: white;
+  background: rgba(255, 255, 255, 0.384);
   padding: 60px;
   border-radius: 30px;
 
