--- a/nico.css
+++ b/nico.css
@@ -269,3 +269,22 @@ video {
 }
 
 
+
+.video-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  aspect-ratio: 16 / 9;
+  border-radius: 25px;
+  overflow: hidden;
+  box-shadow: 0 0 60px rgba(255,120,150,0.6);
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
